--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,13 +1,17 @@
 [fluid-name]
 iodine=Iodine
 brine=Brine
+pseudoephedrine=Pseudoephedrine
 
 [item-name]
 evaporator=Evaporator
 salt=Salt
+advanced-organic-catalyst=Advanced Organic Catalyst
 
 [recipe-name]
 salt=Salt
+pseudoephedrine=Pseudoephedrine
+advanced-organic-catalyst=Advanced Organic Catalyst
 
 [entity-name]
 evaporator=Evaporator
